# airbender

./: .gitignore  Cargo.toml  README.md
assets/character/: animations.ron  character_dash.ron  character_run.anim
assets/sprites/example/: character_dash.ron  character_run.ron  ruins_day.psd  ruins_day.ron  ruins_night.ron
config/: display.ron
src/: main.rs  utils.rs
src/components/: animation.rs  collision.rs  mod.rs  movement.rs  physics.rs
src/entities/: camera.rs  mod.rs  player.rs
src/resources/: display.rs  loading.rs  mod.rs  sprites.rs
src/states/: init_state.rs  mod.rs
src/systems/: animation.rs  collision.rs  mod.rs  motion.rs
