[package]
name = "airbender"
version = "0.1.0"
authors = ["Jill Please <jillplspls@example.com>"]
edition = "2018"

[dependencies]
itertools-num = "0.1.3"

[dependencies.amethyst]
git = "https://github.com/amethyst/amethyst.git"
branch="main"
default-features = false
features = ["audio", "animation", "vulkan", "renderer", "parallel", "utils", "no-slow-safety-checks"]